<resources>
    <!-- App Wide -->
    <string name="app_name">Navsys Client</string>
    <string name="settings">Settings</string>
    <string name="location_permission_rationale">Location access needed to get your indoor position</string>

    <!-- Main Activity -->
    <string name="title_pick_a_destination">Pick a destination</string>
    <string name="no_destinations">Could not fetch any destinations</string>
    <string name="menu_refresh">Refresh list</string>

    <!-- Navigation Activity -->
    <string name="close">Close</string>
    <string name="finished">Finished</string>
    <string name="title_navigation">Navigation</string>
    <string name="navigating_to">Navigating to location:</string>
    <string name="current_location">Current location:</string>
    <string name="navigating">Navigating</string>
    <string name="initializing">Initializing...</string>
    <string name="assigned_color">Assigned color:</string>
    <string name="cancel_navigation">Cancel Navigation</string>
</resources>
